--- a/src/components/shared/Footer/styles.css
+++ b/src/components/shared/Footer/styles.css
@@ -43,6 +43,7 @@
   list-style: none;
   color: white;
   display: flex;
+  gap: 6px;
   align-items: center;
   justify-content: center;
   width: fit-content;
