--- a/src/components/HighlightVideoPlayer/styles.css
+++ b/src/components/HighlightVideoPlayer/styles.css
@@ -1,13 +1,13 @@
 .video-player-wrapper {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: -10%;
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  margin-top: -10%;
   background: none;
 }
 
 .yt-iframe-player {
-  z-index: 0;
+  z-index: -1;
   top: 0px;
   left: 0;
   width: 100%;
@@ -15,40 +15,8 @@
   opacity: 0.8;
 }
 
-.custom-video-controls {
-  height: fit-content;
-  width: 100%;
-  margin: 0;
-  position: absolute;
-  display: flex;
-  bottom: 6%;
-  background: none;
-  justify-content: center;
-  gap: 15px;
-}
-
-.custom-player-button {
-  color: var(--secondary);
-  background: none;
-  display: flex;
-  border-radius: 50%;
-  border: none;
-  outline: none;
-  height: fit-content;
-  width: fit-content;
-  padding: 0;
-  cursor: pointer;
-  z-index: 3;
-  opacity: 0.5;
-  transition: opacity 0.4s ease-out;
-}
-
-.custom-player-button:hover {
-  opacity: 1;
-}
-
 @media (max-height: 720px) and (orientation: landscape) {
   .video-player-wrapper {
-    top: 0%;
+    margin-top: 0;
   }
 }
