--- a/src/components/HighlightVideoPlayer/styles.css
+++ b/src/components/HighlightVideoPlayer/styles.css
@@ -1,7 +1,7 @@
 .video-player-wrapper {
   position: relative;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   margin-top: -10%;
   background: none;
 }
