--- a/src/components/VideoCategoryDisplay/styles.css
+++ b/src/components/VideoCategoryDisplay/styles.css
@@ -13,6 +13,7 @@
   padding: 0;
   color: var(--grayLight);
   user-select: none;
+  z-index: 4;
 }
 
 .scroll-carousel {
@@ -22,6 +23,7 @@
 
 .category-videos-list {
   display: flex;
+  z-index: 3;
   flex-wrap: nowrap;
   align-items: center;
   height: 100%;
