--- a/src/components/CarouselVideoCard/styles.css
+++ b/src/components/CarouselVideoCard/styles.css
@@ -1,26 +1,115 @@
 .card-wrapper {
-  height: fit-content;
+  position: relative;
+  height: 240px;
   display: flex;
   align-items: center;
-  width: auto;
+  width: 20vw;
   transition: all 0.25s ease-out;
+  background: none;
 }
 
-.card-wrapper:hover, .card-wrapper:focus, .card-wrapper:active {
-  transform: scale(1.2);
+.card-wrapper:hover,
+.card-wrapper:focus,
+.card-wrapper:active {
+  transform: scale(1.1);
   cursor: pointer;
-  box-shadow: 2px 2px 10px 2px var(--contrastLight);
 }
 
 .video-card-image {
-  height: 250px;
-  width: auto;
+  height: 100%;
+  width: 100%;
   user-select: none;
+  transition: opacity 0.25s ease-out;
+  object-fit: cover;
+  border-radius: 10px;
+  border: 2px var(--secondary) solid;
 }
 
-@media (max-width: 720px) {
-  .video-card-image {
-    height: 18vh;
-    width: auto;
+.video-title-wrapper {
+  margin-left: auto;
+  z-index: 2;
+  width: 100%;
+  height: 3.5rem;
+  padding: 8px 10px;
+  background-color: var(--secondary);
+  text-align: right;
+  clip-path: polygon(2% 0%, 100% 0%, 100% 100%, 2% 100%, 0% 50%);
+  transition: transform 0.4s ease-out;
+}
+
+.show-card-title {
+  transform: translateX(0);
+}
+
+.hide-card-title {
+  transform: translateX(128%);
+}
+
+.hide-overflow {
+  position: absolute;
+  bottom: 2.5%;
+  right: -3px;
+  height: fit-content;
+  width: 90%;
+  background: none;
+  overflow: hidden;
+}
+
+.card-title {
+  font-size: 1.1rem;
+  color: var(--primary);
+  margin: 0;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  text-align: end;
+}
+
+.yt-iframe-preview {
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  object-fit: fill;
+}
+
+.preview-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 1024px) {
+  .card-wrapper {
+    width: 35vw;
+  }
+
+  .card-title {
+    font-size: 0.9rem;
+  }
+
+  .hide-card-title {
+    transform: translate(0);
+  }
+
+  .video-title-wrapper {
+    opacity: 0.8;
+  }
+}
+
+@media (max-width: 860px) {
+  .card-wrapper {
+    width: 45vw;
+  }
+}
+
+@media (max-width: 663px) {
+  .card-wrapper {
+    width: 70vw;
   }
 }
