--- a/src/components/Toast/styles.css
+++ b/src/components/Toast/styles.css
@@ -14,13 +14,20 @@
   align-items: center;
 }
 
-.toast-warning {
+.toast {
   font-size: 1.5rem;
   margin: 0;
-  color: rgb(200, 20, 20);
   font-weight: bold;
   letter-spacing: 2px;
   padding: 5px;
+}
+
+.toast-success {
+  color: var(--secondary);
+}
+
+.toast-warning {
+  color: rgb(200, 20, 20);
 }
 
 .close-button-wrapper {
