--- a/src/components/CategoryNavCarousel/CategoryNavCard/styles.css
+++ b/src/components/CategoryNavCarousel/CategoryNavCard/styles.css
@@ -27,19 +27,20 @@
 }
 
 .category-card-normal {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .anime-title {
   position: absolute;
   top: 0;
   bottom: 0;
-  margin-top: auto;
-  margin-bottom: auto;
+  left: 0;
+  right: 0;
+  margin: auto;
   width: 100%;
   height: fit-content;
   background-color: rgba(20, 20, 20, 0.8);
   color: var(--primary);
   font-size: 1.2rem;
-  padding: 5px;
+  padding: 10px;
 }
