--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -13,8 +13,7 @@
 
 .content-wrapper {
   position: relative;
-  max-width: 756px;
-  width: 90%;
+  width: fit-content;
   height: fit-content;
   display: flex;
   flex-direction: column;
@@ -30,6 +29,7 @@
   outline: none;
   cursor: pointer;
   transition: opacity 0.4s ease-out;
+  padding: 0;
 }
 
 .close-modal-button:hover {
