Add spinner animation

--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,13 @@ a {
 
 .spinner {
   color: var(--secondary) !important;
+  animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @media (max-width: 280px) {
